--- a/web/themes/custom/frontend/frontend.libraries.yml
+++ b/web/themes/custom/frontend/frontend.libraries.yml
@@ -14,3 +14,8 @@ node--teaser:
   css:
     component:
       css/components/content/node--teaser.css: {}
+
+banner_block:
+  css:
+    component:
+      css/dev/components/edw/banner-block.css: { }
