--- a/config/default/core.entity_view_display.node.page.teaser.yml
+++ b/config/default/core.entity_view_display.node.page.teaser.yml
@@ -5,6 +5,8 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.page.body
+    - field.field.node.page.field_banner_image
+    - field.field.node.page.field_banner_text
     - field.field.node.page.field_image
     - field.field.node.page.field_metatags
     - field.field.node.page.layout_builder__layout
@@ -58,6 +60,8 @@ content:
     weight: 0
     region: content
 hidden:
+  field_banner_image: true
+  field_banner_text: true
   field_metatags: true
   langcode: true
   layout_builder__layout: true
