--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "drupal/core-composer-scaffold": "^10.0.9",
         "drupal/core-project-message": "^10.0.9",
         "drupal/core-recommended": "^10.0.9",
+        "drupal/crop": "^2.3",
         "drupal/drimage": "^2.0",
         "drupal/easy_breadcrumb": "^2.0",
         "drupal/editor_advanced_link": "^2.0",
@@ -56,6 +57,7 @@
         "drupal/field_group": "^3.4",
         "drupal/honeypot": "^2.0",
         "drupal/image_max_size_crop": "^2.0",
+        "drupal/image_widget_crop": "^2.4",
         "drupal/layout_builder_browser": "^1.4",
         "drupal/layout_builder_modal": "^1.1",
         "drupal/layout_builder_restrictions": "^2.12",
