--- a/config/default/core.entity_view_display.node.page.teaser.yml
+++ b/config/default/core.entity_view_display.node.page.teaser.yml
@@ -11,10 +11,10 @@ dependencies:
     - field.field.node.page.field_metatags
     - field.field.node.page.layout_builder__layout
     - field.field.node.page.layout_builder__translation
-    - image.style.teaser
     - node.type.page
+    - responsive_image.styles.16_9
   module:
-    - media
+    - media_responsive_thumbnail
     - smart_trim
     - user
 id: node.page.teaser
@@ -44,13 +44,11 @@ content:
     weight: 1
     region: content
   field_image:
-    type: media_thumbnail
+    type: media_responsive_thumbnail
     label: hidden
     settings:
+      responsive_image_style: '16_9'
       image_link: content
-      image_style: teaser
-      image_loading:
-        attribute: lazy
     third_party_settings: {  }
     weight: 2
     region: content
