--- a/config/default/image.style.hero_banner.yml
+++ b/config/default/image.style.hero_banner.yml
@@ -2,16 +2,25 @@ uuid: a3c8d8dd-952b-47a0-a9e7-939250bf0f1e
 langcode: en
 status: true
 dependencies:
+  config:
+    - crop.type.hero_banner
   module:
-    - image_max_size_crop
+    - crop
 name: hero_banner
 label: 'Hero banner'
 effects:
-  c1bbb364-62ac-40a3-add2-e6ef3fa55c04:
-    uuid: c1bbb364-62ac-40a3-add2-e6ef3fa55c04
-    id: image_max_size_crop
-    weight: 1
+  70bb43cb-8d74-458e-9426-db710978f8e0:
+    uuid: 70bb43cb-8d74-458e-9426-db710978f8e0
+    id: crop_crop
+    weight: -10
     data:
-      width: ''
-      height: '400'
+      crop_type: hero_banner
+      automatic_crop_provider: null
+  a412c441-9a23-4245-8247-8dd49b44c4cb:
+    uuid: a412c441-9a23-4245-8247-8dd49b44c4cb
+    id: image_scale_and_crop
+    weight: 3
+    data:
+      width: 1600
+      height: 400
       anchor: center-center
