--- a/config/default/core.entity_form_display.node.news.default.yml
+++ b/config/default/core.entity_form_display.node.news.default.yml
@@ -12,6 +12,7 @@ dependencies:
   module:
     - media_library
     - path
+    - select2
     - text
 id: node.news.default
 targetEntityType: node
@@ -57,14 +58,14 @@ content:
       media_types: {  }
     third_party_settings: {  }
   field_news_type:
-    type: entity_reference_autocomplete
+    type: select2_entity_reference
     weight: 122
     region: content
     settings:
+      width: 100%
+      autocomplete: false
       match_operator: CONTAINS
       match_limit: 10
-      size: 60
-      placeholder: ''
     third_party_settings: {  }
   langcode:
     type: language_select
