--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,10 @@
                     "reference": "8.x-1.x"
                 }
             }
+        },
+        {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
         }
     ],
     "require": {
@@ -73,6 +77,7 @@
         "drupal/redirect": "^1.7",
         "drupal/remove_username": "^1.3",
         "drupal/search_api": "^1.23",
+        "drupal/select2": "^1.15",
         "drupal/simple_search_form": "dev-custom",
         "drupal/smart_trim": "^2.0",
         "drupal/smtp": "^1.0",
@@ -84,7 +89,9 @@
         "drupal/webp": "^1.0@beta",
         "drupal/xmlsitemap": "^1.2",
         "drush/drush": "^11.0",
-        "eaudeweb/heavy-lifter": "^2"
+        "eaudeweb/heavy-lifter": "^2",
+        "npm-asset/select2": "^4.0",
+        "oomphinc/composer-installers-extender": "^2.0"
     },
     "require-dev": {
         "drupal/coder": "^8.3",
@@ -107,7 +114,8 @@
             "drupal/core-composer-scaffold": true,
             "dealerdirect/phpcodesniffer-composer-installer": true,
             "drupal/core-project-message": true,
-            "phpstan/extension-installer": true
+            "phpstan/extension-installer": true,
+            "oomphinc/composer-installers-extender": true
         },
         "platform": {
             "php": "8.1"
@@ -128,7 +136,9 @@
                 "type:drupal-core"
             ],
             "web/libraries/{$name}": [
-                "type:drupal-library"
+                "type:drupal-library",
+                "type:bower-asset",
+                "type:npm-asset"
             ],
             "web/modules/contrib/{$name}": [
                 "type:drupal-module"
@@ -152,6 +162,7 @@
                 "type:drupal-custom-theme"
             ]
         },
+        "installer-types": ["bower-asset", "npm-asset"],
         "enable-patching": true,
         "patches-file": "composer.patches.json"
     },
