--- a/config/default/core.entity_view_display.node.news.compact_teaser.yml
+++ b/config/default/core.entity_view_display.node.news.compact_teaser.yml
@@ -1,9 +1,9 @@
-uuid: 336e2f79-64be-4755-a37b-0194f01ba281
+uuid: 019a52b0-a76d-4185-91e5-d5fbf000e792
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
+    - core.entity_view_mode.node.compact_teaser
     - field.field.node.news.body
     - field.field.node.news.field_banner_image
     - field.field.node.news.field_banner_text
@@ -11,46 +11,31 @@ dependencies:
     - field.field.node.news.field_news_type
     - field.field.node.news.layout_builder__layout
     - field.field.node.news.layout_builder__translation
+    - image.style.16_9_768x432
     - node.type.news
-    - responsive_image.styles.16_9
   module:
-    - media_responsive_thumbnail
-    - smart_trim
+    - layout_builder
+    - media
     - user
-id: node.news.teaser
+third_party_settings:
+  layout_builder:
+    enabled: false
+    allow_custom: false
+id: node.news.compact_teaser
 targetEntityType: node
 bundle: news
-mode: teaser
+mode: compact_teaser
 content:
-  body:
-    type: smart_trim
-    label: hidden
-    settings:
-      trim_length: 80
-      trim_type: words
-      trim_suffix: ''
-      wrap_output: false
-      wrap_class: trimmed
-      summary_handler: trim
-      trim_options:
-        text: true
-        trim_zero: false
-        replace_tokens: false
-      more_link: false
-      more_class: more-link
-      more_text: More
-      more_aria_label: 'Read more about [node:title]'
-    third_party_settings: {  }
-    weight: 1
-    region: content
   field_image:
-    type: media_responsive_thumbnail
+    type: media_thumbnail
     label: hidden
     settings:
-      responsive_image_style: '16_9'
       image_link: content
+      image_style: 16_9_768x432
+      image_loading:
+        attribute: lazy
     third_party_settings: {  }
-    weight: 2
+    weight: 0
     region: content
   field_news_type:
     type: entity_reference_label
@@ -58,14 +43,15 @@ content:
     settings:
       link: false
     third_party_settings: {  }
-    weight: 3
+    weight: 2
     region: content
   links:
     settings: {  }
     third_party_settings: {  }
-    weight: 0
+    weight: 1
     region: content
 hidden:
+  body: true
   field_banner_image: true
   field_banner_text: true
   langcode: true
