--- a/config/default/core.entity_view_display.node.news.default.yml
+++ b/config/default/core.entity_view_display.node.news.default.yml
@@ -10,8 +10,48 @@ dependencies:
     - field.field.node.news.field_news_type
     - node.type.news
   module:
+    - layout_builder
+    - layout_builder_restrictions
+    - layout_discovery
     - text
     - user
+third_party_settings:
+  layout_builder:
+    enabled: true
+    allow_custom: true
+    sections:
+      -
+        layout_id: layout_onecol
+        layout_settings:
+          label: ''
+          context_mapping: {  }
+        components:
+          70a6a34b-aec3-4a8a-9b04-a9d7de1d27eb:
+            uuid: 70a6a34b-aec3-4a8a-9b04-a9d7de1d27eb
+            region: content
+            configuration:
+              id: 'field_block:node:news:body'
+              label: Body
+              label_display: '0'
+              provider: layout_builder
+              context_mapping:
+                entity: layout_builder.entity
+                view_mode: view_mode
+              formatter:
+                type: text_default
+                label: hidden
+                settings: {  }
+                third_party_settings: {  }
+            weight: 0
+            additional: {  }
+        third_party_settings: {  }
+  layout_builder_restrictions:
+    allowed_block_categories: {  }
+    entity_view_mode_restriction:
+      allowed_layouts: {  }
+      denylisted_blocks: {  }
+      allowlisted_blocks: {  }
+      restricted_categories: {  }
 id: node.news.default
 targetEntityType: node
 bundle: news
