--- a/config/default/block.block.herobanner.yml
+++ b/config/default/block.block.herobanner.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   module:
-    - edw
+    - edw_blocks
     - system
   theme:
     - frontend
@@ -16,8 +16,8 @@ plugin: edw_hero_banner
 settings:
   id: edw_hero_banner
   label: 'Hero banner'
-  label_display: visible
-  provider: edw
+  label_display: '0'
+  provider: edw_blocks
 visibility:
   request_path:
     id: request_path
