--- a/web/modules/custom/edw/modules/edw_blocks/config/optional/views.view.content_listing.yml
+++ b/web/modules/custom/edw/modules/edw_blocks/config/optional/views.view.content_listing.yml
@@ -1,4 +1,3 @@
-uuid: 7425eaff-3a95-4b70-8985-ad7b27b3a2fd
 langcode: en
 status: true
 dependencies:
@@ -324,8 +323,8 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
-  block_generic_listing:
-    id: block_generic_listing
+  block_1:
+    id: block_1
     display_title: Block
     display_plugin: block
     position: 1
