--- a/composer.json
+++ b/composer.json
@@ -6,20 +6,19 @@
     "homepage": "https://getdkan.org/",
     "support": {
         "source": "https://github.com/getdkan",
-        "docs": "https://dkan.readthedocs.io/en/stable/introduction/get-dkan.html"
+        "docs": "https://dkan.readthedocs.io/en/latest/index.html"
     },
     "require": {
-        "composer/installers": "^1.9",
+        "composer/installers": "^2.0",
         "cweagans/composer-patches": "^1.7",
         "drupal/admin_toolbar": "^3",
-        "drupal/config_update": "^2.0.0-alpha2",
-        "drupal/core-composer-scaffold": "~10.0.0",
-        "drupal/core-recommended": "~10.0.0",
+        "drupal/core-composer-scaffold": "~10.1.0",
+        "drupal/core-recommended": "~10.1.0",
         "drush/drush": "^11.5",
-        "getdkan/dkan": "^2.15.1"
+        "getdkan/dkan": "^2.16.4"
     },
     "require-dev": {
-        "drupal/core-dev": "~10.0.0",
+        "drupal/core-dev": "~10.1.0",
         "getdkan/mock-chain": "^1.3.0",
         "phpspec/prophecy-phpunit": "^2",
         "weitzman/drupal-test-traits": "^2.0.1"
@@ -46,7 +45,6 @@
             "cweagans/composer-patches": true,
             "oomphinc/composer-installers-extender": true,
             "drupal/core-composer-scaffold": true,
-            "drupal/core-project-message": true,
             "phpstan/extension-installer": true
         },
         "sort-packages": true
@@ -95,7 +93,7 @@
         ],
         "patches": {
             "drupal/core": {
-                "2893933: claimItem in the database and memory queues does not use expire correctly": "https://www.drupal.org/files/issues/2023-01-10/2893933-drupal-queue-claim-9.5.x-58.patch"
+                "2893933: claimItem in the database and memory queues does not use expire correctly": "https://www.drupal.org/files/issues/2023-06-26/2893933-queue_lease_time-11.x-67.patch"
             }
         }
     }
