--- a/.github/workflows/templates/qa-code.yml
+++ b/.github/workflows/templates/qa-code.yml
@@ -1,18 +1,16 @@
-####
-# 1. Configure below the triggers when the checks are running
-####
-
-on: [pull_request]
-name: 'Quality assurance'
+on:
+  pull_request:
+  push:
+    branches:
+      - master
+name: 'QA - code quality'
 jobs:
   qa-code:
     name: 'Check code quality'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 1
-      - uses: eaudeweb/drupal-install-action@main
-        with:
-          dev: true
-      - uses: eaudeweb/drupal-code-qa-action@main
+      - uses: eaudeweb/drupal-install-action@v1.1
+      - uses: eaudeweb/drupal-code-qa-action@v2.0
