--- a/composer.json
+++ b/composer.json
@@ -129,8 +129,12 @@
         "drupal/devel": "^5.1",
         "drupal/stage_file_proxy": "^2.0",
         "drupal/twig_vardumper": "^3.0",
-        "overtrue/phplint": "^9",
-        "phpmd/phpmd": "^2.12"
+        "mglaman/phpstan-drupal": "^1.1",
+        "overtrue/phplint": "^9.0",
+        "phpmd/phpmd": "^2.13",
+        "phpstan/extension-installer": "^1.3",
+        "phpstan/phpstan": "^1.10",
+        "phpstan/phpstan-deprecation-rules": "^1.1"
     },
     "conflict": {
         "drupal/drupal": "*"
