--- a/config/default/core.entity_view_display.node.news.default.yml
+++ b/config/default/core.entity_view_display.node.news.default.yml
@@ -8,6 +8,8 @@ dependencies:
     - field.field.node.news.field_banner_text
     - field.field.node.news.field_image
     - field.field.node.news.field_news_type
+    - field.field.node.news.layout_builder__layout
+    - field.field.node.news.layout_builder__translation
     - node.type.news
   module:
     - layout_builder
@@ -44,7 +46,6 @@ third_party_settings:
                 third_party_settings: {  }
             weight: 0
             additional: {  }
-            third_party_settings: {  }
         third_party_settings: {  }
   layout_builder_restrictions:
     allowed_block_categories: {  }
