--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -37,6 +37,7 @@ module:
   edw_blocks: 0
   edw_healthcheck: 0
   environment_indicator: 0
+  facets: 0
   field: 0
   field_group: 0
   field_ui: 0
@@ -77,6 +78,7 @@ module:
   options: 0
   path: 0
   path_alias: 0
+  phpass: 0
   redirect: 0
   redirect_404: 0
   remove_username: 0
