--- a/composer.json
+++ b/composer.json
@@ -117,6 +117,7 @@
         "drupal/optional_end_date": "^1.2",
         "drupal/password_strength": "dev-custom",
         "drupal/pathauto": "^1.9",
+        "drupal/recaptcha": "^3.2",
         "drupal/redirect": "^1.7",
         "drupal/remove_username": "^1.3",
         "drupal/search_api": "^1.23",
