--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -10,6 +10,7 @@ module:
   advagg_js_minify: 0
   ajax_loader: 0
   allowed_formats: 0
+  autologout: 0
   backup_migrate: 0
   basic_auth: 0
   blazy: 0
