--- a/composer.json
+++ b/composer.json
@@ -118,6 +118,7 @@
         "drupal/optional_end_date": "^1.2",
         "drupal/password_strength": "dev-custom",
         "drupal/pathauto": "^1.9",
+        "drupal/real_aes": "^2.5",
         "drupal/recaptcha": "^3.2",
         "drupal/redirect": "^1.7",
         "drupal/remove_username": "^1.3",
@@ -128,6 +129,7 @@
         "drupal/smart_trim": "^2.0",
         "drupal/smtp": "^1.0",
         "drupal/spamspan": "^3.0@beta",
+        "drupal/tfa": "^1.2",
         "drupal/token": "^1.10",
         "drupal/twig_tweak": "^3.1",
         "drupal/webform": "^6.1",
