--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,6 +1,8 @@
-includes:
-	- phpstan-baseline.neon
 parameters:
-    level: 9
-    paths:
-        - web/modules/custom
+  level: 5
+  paths:
+    - web/modules/custom
+  reportUnmatchedIgnoredErrors: false
+  checkMissingIterableValueType: false
+  ignoreErrors:
+    - "#^Unsafe usage of new static#"
