--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -33,9 +33,9 @@ module:
   easy_breadcrumb: 0
   editor: 0
   editor_advanced_link: 0
-  edw: 0
   edw_blocks: 0
   edw_healthcheck: 0
+  edw_modules: 0
   encrypt: 0
   environment_indicator: 0
   facets: 0
