--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -21,6 +21,7 @@ module:
   ckeditor5: 0
   ckeditor_accordion: 0
   ckeditor_bs_grid: 0
+  clamav: 0
   conditional_fields: 0
   config_translation: 0
   contextual: 0
