--- a/config/default/editor.editor.full_html.yml
+++ b/config/default/editor.editor.full_html.yml
@@ -17,6 +17,11 @@ settings:
       - italic
       - underline
       - strikethrough
+      - subscript
+      - superscript
+      - '|'
+      - undo
+      - redo
       - '|'
       - heading
       - '|'
@@ -37,6 +42,9 @@ settings:
       - removeFormat
       - '|'
       - Accordion
+      - bootstrapGrid
+      - '|'
+      - code
   plugins:
     ckeditor5_alignment:
       enabled_alignments:
@@ -58,8 +66,32 @@ settings:
       startIndex: true
     ckeditor5_sourceEditing:
       allowed_tags: {  }
+    ckeditor_bs_grid_grid:
+      use_cdn: true
+      cdn_url: 'https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css'
+      available_columns:
+        - '1'
+        - '2'
+        - '3'
+        - '4'
+        - '5'
+        - '6'
+        - '7'
+        - '8'
+        - '9'
+        - '10'
+        - '11'
+        - '12'
+      available_breakpoints:
+        - xs
+        - sm
+        - md
+        - lg
+        - xl
+        - xxl
     editor_advanced_link_link:
-      enabled_attributes: {  }
+      enabled_attributes:
+        - target
     media_media:
       allow_view_mode_override: false
 image_upload:
