--- a/config/default/key.key.encryption_key.yml
+++ b/config/default/key.key.encryption_key.yml
@@ -7,11 +7,11 @@ label: 'Encryption Key'
 description: ''
 key_type: encryption
 key_type_settings:
-  key_size: 128
+  key_size: 256
 key_provider: config
 key_provider_settings:
-  key_value: ILM935EY0D7BNHQP
+  key_value: !!binary DEgXE/yPqxl5ZERduLxnqvzpExZgx0elVI9c4RPLmtA=
   base64_encoded: false
 key_input: text_field
 key_input_settings:
-  base64_encoded: false
+  base64_encoded: true
