--- a/config/default/tfa.settings.yml
+++ b/config/default/tfa.settings.yml
@@ -2,41 +2,44 @@ _core:
   default_config_hash: dE7ohRe7gCL2n0BFaWfocJnskZdQ6wHnzaFTl3O0RJ0
 langcode: en
 enabled: false
-required_roles: {  }
+required_roles:
+  authenticated: authenticated
+  edw_healthcheck_role: '0'
 send_plugins: {  }
-login_plugins: {  }
-default_validation_plugin: ''
-validation_plugin_settings: {  }
-allowed_validation_plugins: {  }
-help_text: 'Contact support to reset your access'
+login_plugins:
+  tfa_trusted_browser: tfa_trusted_browser
+login_plugin_settings:
+  tfa_trusted_browser:
+    cookie_allow_subdomains: true
+    cookie_expiration: 30
+    cookie_name: tfa-trusted-browser
+allowed_validation_plugins:
+  tfa_totp: tfa_totp
+default_validation_plugin: tfa_totp
+validation_plugin_settings:
+  tfa_recovery_code:
+    recovery_codes_amount: 10
+  tfa_totp:
+    time_skew: 2
+    site_name_prefix: 1
+    name_prefix: TFA
+    issuer: 'Drupal website'
+  tfa_hotp:
+    counter_window: 10
+    site_name_prefix: 1
+    name_prefix: TFA
+    issuer: Drupal
 validation_skip: 3
-encryption: ''
+reset_pass_skip_enabled: false
+encryption: encryption_profile
 tfa_flood_uid_only: 1
 tfa_flood_window: 300
 tfa_flood_threshold: 6
-reset_pass_skip_enabled: false
+help_text: 'Contact support to reset your access'
 mail:
   tfa_enabled_configuration:
     subject: 'Your [site:name] account now has two-factor authentication'
-    body: |-
-      [user:display-name],
-
-      Thanks for configuring two-factor authentication on your [site:name] account!
-
-      This additional level of security will help to ensure that only you are able to log in to your account.
-
-      If you ever lose the device you configured, you should act quickly to delete its association with this account.
-
-      --
-      [site:name] team
+    body: "[user:display-name],\r\n\r\nThanks for configuring two-factor authentication on your [site:name] account!\r\n\r\nThis additional level of security will help to ensure that only you are able to log in to your account.\r\n\r\nIf you ever lose the device you configured, you should act quickly to delete its association with this account.\r\n\r\n--\r\n[site:name] team"
   tfa_disabled_configuration:
     subject: 'Your [site:name] account no longer has two-factor authentication'
-    body: |-
-      [user:display-name],
-
-      Two-factor authentication has been disabled on your [site:name] account.
-
-      If you did not take this action, please contact a site administrator immediately.
-
-      --
-      [site:name] team
+    body: "[user:display-name],\r\n\r\nTwo-factor authentication has been disabled on your [site:name] account.\r\n\r\nIf you did not take this action, please contact a site administrator immediately.\r\n\r\n--\r\n[site:name] team"
